--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "task1-web-api-sudipsinghkhati",
+  "name": "go-fund-life-api",
   "version": "1.0.0",
-  "description": "[![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-24ddc0f5d75046c5622901739e7c5dd533143b0c8e959d652212380cedb1ea36.svg)](https://classroom.github.com/a/eiITFe3b)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,7 +16,7 @@
     "express": "^4.18.2",
     "jest": "^25.0.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.2.1",
+    "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
   },
